fix nav z-index

--- a/assets2/css/scss/nav.scss
+++ b/assets2/css/scss/nav.scss
@@ -1,5 +1,6 @@
 nav.navbar {
     position: fixed;
+    z-index: 100;
     width: 100vw;
     background-color: $primary-color;
     .navbar-brand {
