--- a/assets2/css/styles.css
+++ b/assets2/css/styles.css
@@ -98,6 +98,7 @@ h3 {
 
 nav.navbar {
   position: fixed;
+  z-index: 100;
   width: 100vw;
   background-color: #172a4e;
 }
